Update image source and dialogue text in Mark.html

--- a/Mark.html
+++ b/Mark.html
@@ -141,7 +141,7 @@
 
 <div class="fade" id="fade"></div>
 
-<img src="character.png" id="slideImage" class="slide-in" alt="Character">
+<img src="FazBong.png" id="slideImage" class="slide-in" alt="Character">
 
 <!-- OPTIONS -->
 <div class="options" id="optionsMenu">
@@ -169,7 +169,7 @@ const dialogue1 = [
     "You: Huh, the new FNAF movie is out.",
     "You: Might as well check it out, I already got the fit on.",
     "You: But before I head out...",
-    "You: I should take a hit from my Freddy Faz-Bong."
+    "You: I should take a hit from my Freddy Faz-Bong..."
 ];
 
 /* SCENE 2 DIALOGUE */
