--- a/Mark.html
+++ b/Mark.html
@@ -174,9 +174,13 @@ const dialogue1 = [
 
 /* SCENE 2 DIALOGUE */
 const dialogue2 = [
-    "You: ...Woah.",
-    "You: This place looks way different than I expected.",
-    "??? : Took you long enough."
+    "You: DAAAAYMMMM.",
+    "This place is PACKED",
+    "and the concession prices are crazy jacked, good thing I stopped by the 7/11 for snacks beforehand."
+    "Row 19 J-..."
+    "no fucking way..."
+    "MARKIPLIER!?!??!"
+    "I have to say hi to him"
 ];
 
 let dialogue = dialogue1;
