--- a/Mark.html
+++ b/Mark.html
@@ -6,134 +6,102 @@
 <title>Dating Sim — Scene</title>
 
 <style>
-    body {
-        margin: 0;
-        height: 100vh;
-        width: 100vw;
-        background-image: url("Artboard 1.png");
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        position: relative;
-        overflow: hidden;
-        font-family: Arial, sans-serif;
-        cursor: pointer;
-    }
+body {
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    background: url("Artboard 1.png") center / cover no-repeat;
+    position: relative;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+    cursor: pointer;
+}
 
-    /* Fade overlay */
-    .fade {
-        position: absolute;
-        inset: 0;
-        background: black;
-        opacity: 0;
-        transition: opacity 1s ease;
-        pointer-events: none;
-        z-index: 100;
-    }
+/* Fade overlay */
+.fade {
+    position: absolute;
+    inset: 0;
+    background: black;
+    opacity: 0;
+    transition: opacity 1s ease;
+    pointer-events: none;
+    z-index: 100;
+}
+.fade.active { opacity: 1; }
 
-    .fade.active {
-        opacity: 1;
-    }
+/* Dialogue box */
+.dialogue-box {
+    position: absolute;
+    bottom: 3%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 70%;
+    max-width: 900px;
+    z-index: 10;
+}
+.dialogue-box img { width: 100%; }
 
-    /* Dialogue box */
-    .dialogue-box {
-        position: absolute;
-        bottom: 3%;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 70%;
-        max-width: 900px;
-        z-index: 10;
-    }
+/* Dialogue text */
+.dialogue-text {
+    position: absolute;
+    bottom: 13%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%;
+    max-width: 750px;
+    font-size: 1.65rem;
+    font-weight: bold;
+    color: black;
+    z-index: 11;
+    animation: pop .35s ease;
+}
+@keyframes pop {
+    from { opacity: 0; transform: translateX(-50%) scale(.96); }
+    to { opacity: 1; transform: translateX(-50%) scale(1); }
+}
 
-    .dialogue-box img {
-        width: 100%;
-        display: block;
-    }
+/* Sliding PNG */
+.slide-in {
+    position: absolute;
+    bottom: 0;
+    left: -40%;
+    width: 40%;
+    transition: left 1s ease, opacity .5s ease;
+    z-index: 5;
+}
+.slide-in.active { left: 0; }
+.slide-in.hide { opacity: 0; }
 
-    /* Dialogue text */
-    .dialogue-text {
-        position: absolute;
-        bottom: 13%;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 60%;
-        max-width: 750px;
-        font-size: 1.65rem;
-        font-weight: bold;
-        line-height: 1.35;
-        color: black;
-        pointer-events: none;
-        user-select: none;
-        animation: pop 0.4s ease;
-        z-index: 11;
-    }
-
-    @keyframes pop {
-        from { opacity: 0; transform: translateX(-50%) scale(0.95); }
-        to   { opacity: 1; transform: translateX(-50%) scale(1); }
-    }
-
-    /* Sliding PNG */
-    .slide-in {
-        position: absolute;
-        bottom: 0;
-        left: -40%;
-        width: 40%;
-        transition: left 1s ease, opacity 0.5s ease;
-        z-index: 5;
-        opacity: 1;
-    }
-
-    .slide-in.active {
-        left: 0;
-    }
-
-    .slide-in.hide {
-        opacity: 0;
-    }
-
-    /* OPTIONS */
-    .options {
-        position: absolute;
-        top: 50%;
-        right: 6%;
-        transform: translateY(-50%);
-        display: none;
-        flex-direction: column;
-        gap: 20px;
-        z-index: 30;
-    }
-
-    .option-btn {
-        position: relative;
-        width: 260px;
-        text-decoration: none;
-        cursor: pointer;
-        transition: transform 0.2s ease;
-    }
-
-    .option-btn:hover {
-        transform: scale(1.05);
-    }
-
-    .option-btn img {
-        width: 100%;
-        display: block;
-    }
-
-    .option-label {
-        position: absolute;
-        inset: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        font-size: 1.4rem;
-        font-weight: bold;
-        text-shadow: 1px 1px 3px black;
-        pointer-events: none;
-    }
+/* OPTIONS */
+.options {
+    position: absolute;
+    top: 50%;
+    right: 6%;
+    transform: translateY(-50%);
+    display: none;
+    flex-direction: column;
+    gap: 20px;
+    z-index: 50;
+}
+.option-btn {
+    position: relative;
+    width: 260px;
+    cursor: pointer;
+    transition: transform .2s ease;
+}
+.option-btn:hover { transform: scale(1.05); }
+.option-btn img { width: 100%; }
+.option-label {
+    position: absolute;
+    inset: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 1.4rem;
+    font-weight: bold;
+    text-shadow: 1px 1px 3px black;
+}
 </style>
 </head>
 
@@ -141,114 +109,95 @@
 
 <div class="fade" id="fade"></div>
 
-<img src="FazBong.png" id="slideImage" class="slide-in" alt="Character">
+<img src="character.png" id="slideImage" class="slide-in">
 
-<!-- OPTIONS -->
 <div class="options" id="optionsMenu">
     <a href="MarkTalk.html" class="option-btn">
-        <img src="ButtonD.png" alt="Talk">
+        <img src="ButtonD.png">
         <div class="option-label">talk</div>
     </a>
-
     <a href="MarkFail.html" class="option-btn">
-        <img src="ButtonD.png" alt="Ignore">
+        <img src="ButtonD.png">
         <div class="option-label">ignore</div>
     </a>
 </div>
 
-<div class="dialogue-box">
-    <img src="DBox.png" alt="Dialogue Box">
+<div class="dialogue-box" id="dialogueBox">
+    <img src="DBox.png">
 </div>
 
 <div class="dialogue-text" id="dialogueText"></div>
 
 <script>
-/* SCENE 1 DIALOGUE */
 const dialogue1 = [
     "You: Oh yeah, looking suave *phone ping*.",
     "You: Huh, the new FNAF movie is out.",
-    "You: Might as well check it out, I already got the fit on.",
+    "You: Might as well check it out.",
     "You: But before I head out...",
-    "You: I should take a hit from my Freddy Faz-Bong..."
+    "You: I should take a hit from my Freddy Faz-Bong."
 ];
 
-/* SCENE 2 DIALOGUE */
 const dialogue2 = [
-    "You: DAAAAYMMMM.",
-    "This place is PACKED",
-    "and the concession prices are crazy jacked, good thing I stopped by the 7/11 for snacks beforehand."
-    "Row 19 J-..."
-    "no fucking way..."
-    "MARKIPLIER!?!??!"
-    "I have to say hi to him"
+    "You: ...Woah.",
+    "You: This place looks way different than I expected.",
+    "??? : Took you long enough."
 ];
 
 let dialogue = dialogue1;
 let index = 0;
-let phase = "dialogue"; 
-// dialogue → slide → fade → newDialogue → options
+let phase = "dialogue";
 
-const dialogueText = document.getElementById("dialogueText");
-const slideImage = document.getElementById("slideImage");
+const text = document.getElementById("dialogueText");
 const fade = document.getElementById("fade");
-const optionsMenu = document.getElementById("optionsMenu");
+const slide = document.getElementById("slideImage");
+const options = document.getElementById("optionsMenu");
+const box = document.getElementById("dialogueBox");
 
-/* Initialize */
-dialogueText.textContent = dialogue[index];
+text.textContent = dialogue[index];
 
 document.body.addEventListener("click", advance);
+box.addEventListener("click", advance);
 
 function advance(e) {
     if (e.target.closest(".option-btn")) return;
 
     if (phase === "dialogue") {
-        if (index < dialogue.length - 1) {
-            index++;
-            updateText();
-        } else {
-            phase = "slide";
-        }
+        if (++index < dialogue.length) update();
+        else phase = "slide";
     }
 
     else if (phase === "slide") {
-        slideImage.classList.add("active");
+        slide.classList.add("active");
         phase = "fade";
     }
 
     else if (phase === "fade") {
         fade.classList.add("active");
-
         setTimeout(() => {
-            document.body.style.backgroundImage = 'url("Artboard 3.png")';
-
-            slideImage.classList.remove("active");
-            slideImage.classList.add("hide");
-
+            document.body.style.backgroundImage = 'url("Artboard 2.png")';
+            slide.classList.add("hide");
             dialogue = dialogue2;
             index = 0;
-            dialogueText.textContent = dialogue[index];
-
+            text.textContent = dialogue[0];
             fade.classList.remove("active");
             phase = "newDialogue";
         }, 1000);
     }
 
     else if (phase === "newDialogue") {
-        if (index < dialogue.length - 1) {
-            index++;
-            updateText();
-        } else {
+        if (++index < dialogue.length) update();
+        else {
             phase = "options";
-            optionsMenu.style.display = "flex";
+            options.style.display = "flex";
         }
     }
 }
 
-function updateText() {
-    dialogueText.textContent = dialogue[index];
-    dialogueText.style.animation = "none";
-    dialogueText.offsetHeight;
-    dialogueText.style.animation = "pop 0.4s ease";
+function update() {
+    text.textContent = dialogue[index];
+    text.style.animation = "none";
+    text.offsetHeight;
+    text.style.animation = "pop .35s ease";
 }
 </script>
 
