--- a/Mark.html
+++ b/Mark.html
@@ -131,21 +131,21 @@ body {
 <script>
 const dialogue1 = [
     "You: Oh yeah, looking suave *phone ping*.",
-    " Huh, the new FNAF movie is out.",
-    " Might as well check it out.",
-    " But before I head out...",
-    " I should take a hit from my Freddy Faz-Bong..."
+    "Huh, the new FNAF movie is out.",
+    "Might as well check it out.",
+    "But before I head out...",
+    "I should take a hit from my Freddy Faz-Bong..."
 ];
 
 const dialogue2 = [
     "You: DAAAYYYMMMMM.",
-    " This place is packed",
-    " And the concession stand was hella expensive"
-    " Good thing I stopped by the 7-Eleven and grabbed some sna-"
-    "..."
-    " No fucking way..."
-    " MARKIPLIER!?!?!"
-    " Should I talk to him??"
+    "This place is packed.",
+    "And the concession stand was hella expensive.",
+    "Good thing I stopped by the 7-Eleven and grabbed some sna-",
+    "...",
+    "No fucking way...",
+    "MARKIPLIER!?!?!",
+    "Should I talk to him??"
 ];
 
 let dialogue = dialogue1;
@@ -158,6 +158,7 @@ const slide = document.getElementById("slideImage");
 const options = document.getElementById("optionsMenu");
 const box = document.getElementById("dialogueBox");
 
+/* Initialize */
 text.textContent = dialogue[index];
 
 document.body.addEventListener("click", advance);
