--- a/Mark.html
+++ b/Mark.html
@@ -109,7 +109,7 @@ body {
 
 <div class="fade" id="fade"></div>
 
-<img src="FazeBong.png" id="slideImage" class="slide-in">
+<img src="FazBong.png" id="slideImage" class="slide-in">
 
 <div class="options" id="optionsMenu">
     <a href="MarkTalk.html" class="option-btn">
