--- a/MarkTalk.html
+++ b/MarkTalk.html
@@ -112,11 +112,11 @@ body {
     </div>
     <div class="option-btn">
         <img src="ButtonD.png">
-        <div class="option-label">Question</div>
+        <div class="option-label">Yes</div>
     </div>
     <div class="option-btn">
         <img src="ButtonD.png">
-        <div class="option-label">Stan</div>
+        <div class="option-label">no</div>
     </div>
 </div>
 
@@ -128,10 +128,13 @@ body {
 
 <script>
 const dialogue = [
-    "You: Uh— hey, Mark?",
-    "Mark: Oh! Hey, what’s up?",
-    "You: Didn’t expect to see you here.",
-    "Mark: Yeah, movies are kind of my thing."
+    "You: Uh— hey, Mark, Im anon nice to meet you",
+    "Mark: Oh! Hey, a fan Im assuming? would you like a picture?",
+    "You: me? -oh no no no, I just wanted to finally meet you",
+    "Mark: Im pleased to meet you anon, you like movies like this?
+    "Mark: cause, movies are kind of my thing, im making one actually."
+    "Mark: Iron Lung, have you heard of it?"
+    
 ];
 
 let index = 0;
