--- a/MarkTalk.html
+++ b/MarkTalk.html
@@ -103,7 +103,7 @@ body {
 
 <body>
 
-<img src="Mark.png" id="slideImage" class="slide-in" alt="Mark">
+<img src="Markipoo.png" id="slideImage" class="slide-in" alt="Mark">
 
 <div class="options" id="optionsMenu">
     <div class="option-btn">
@@ -132,8 +132,8 @@ const dialogue = [
     "Mark: Oh! Hey, a fan Im assuming? would you like a picture?",
     "You: me? -oh no no no, I just wanted to finally meet you",
     "Mark: Im pleased to meet you anon, you like movies like this?
-    "Mark: cause, movies are kind of my thing, im making one actually."
-    "Mark: Iron Lung, have you heard of it?"
+    "Mark: cause, movies are kind of my thing, im making one actually.",
+    "Mark: Iron Lung, have you heard of it?",
     
 ];
 
