Fix dialogue text formatting in MarkTalk.html

--- a/MarkTalk.html
+++ b/MarkTalk.html
@@ -131,7 +131,7 @@ const dialogue = [
     "You: Uh— hey, Mark, Im anon nice to meet you",
     "Mark: Oh! Hey, a fan Im assuming? would you like a picture?",
     "You: me? -oh no no no, I just wanted to finally meet you",
-    "Mark: Im pleased to meet you anon, you like movies like this?
+    "Mark: Im pleased to meet you anon, you like movies like this?",
     "Mark: cause, movies are kind of my thing, im making one actually.",
     "Mark: Iron Lung, have you heard of it?",
     
