--- a/MarkFlirt.html
+++ b/MarkFlirt.html
@@ -103,10 +103,10 @@ body {
 
 <script>
 const dialogue = [
-    "You: Uh— not gonna lie, you look even better in person.",
+    "You: You're my kind of thing.",
     "Mark: Haha, wow— bold. I respect that.",
-    "You: I mean it. You’ve got this… energy.",
-    "Mark: Guess all those years of YouTube paid off, huh?",
+    "You: I mean it. You’ve got this… energy, charismatic and handsome.",
+    "Mark: Guess I came a long way from playing games in my room, huh?",
     "You: Maybe. Or maybe it's just you.",
     "Mark: ...You know what? I like you."
 ];
