--- a/MarkFlirt.html
+++ b/MarkFlirt.html
@@ -100,7 +100,7 @@ body {
 </div>
 
 <div class="dialogue-text" id="dialogueText"></div>
-
+<img src="Markipoo.png">
 <script>
 const dialogue = [
     "You: You're my kind of thing.",
