--- a/MarkFail.html
+++ b/MarkFail.html
@@ -13,27 +13,27 @@ body {
     background: black;
     font-family: Arial, sans-serif;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     flex-direction: column;
     text-align: center;
-    cursor: pointer;
+    cursor: default;
     color: white;
 }
 
-/* Main "BROKEN HEARTS DON'T LAST" text */
+/* Main text at the top of the stack */
 .fail-text {
     color: red;
     font-size: 3.5rem;
     font-weight: 900;
-    margin-top: 50px;
+    margin-bottom: 20px;
     text-shadow: 0 0 15px darkred;
 }
 
 /* Heart image */
 .fail-heart {
     width: 250px;
-    margin: 30px auto 10px;
+    margin-bottom: 15px;
 }
 
 /* Subtext under the heart */
@@ -41,6 +41,7 @@ body {
     font-size: 1.5rem;
     color: white;
     margin-bottom: 30px;
+    max-width: 90%;
 }
 
 /* Play Again button */
