--- a/MarkFail.html
+++ b/MarkFail.html
@@ -71,7 +71,7 @@ body {
 
 <img src="BHeart.png" alt="Broken Heart" class="fail-heart">
 
-<div class="fail-subtext">dude, that's THE Markiplier how are you not going to talk to him???</div>
+<div class="fail-subtext">dude, you just fumbled THE Markiplier how are you going to recover from this???</div>
 
 <button id="playAgainBtn">Play Again?</button>
 
