--- a/MarkNo.html
+++ b/MarkNo.html
@@ -1,1 +1,96 @@
+<!doctype html>
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Dating Sim — Mark No</title>
 
+<style>
+body {
+    margin: 0;
+    height: 100vh;
+    width: 100vw;
+    background: url("Artboard 3.png") center / cover no-repeat;
+    position: relative;
+    overflow: hidden;
+    font-family: Arial, sans-serif;
+    cursor: pointer;
+}
+
+/* Dialogue box */
+.dialogue-box {
+    position: absolute;
+    bottom: 3%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 70%;
+    max-width: 900px;
+    z-index: 10;
+}
+.dialogue-box img {
+    width: 100%;
+}
+
+/* Dialogue text */
+.dialogue-text {
+    position: absolute;
+    bottom: 13%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60%;
+    max-width: 750px;
+    font-size: 1.65rem;
+    font-weight: bold;
+    color: black;
+    z-index: 11;
+    animation: pop .35s ease;
+}
+
+@keyframes pop {
+    from { opacity: 0; transform: translateX(-50%) scale(.96); }
+    to { opacity: 1; transform: translateX(-50%) scale(1); }
+}
+</style>
+</head>
+
+<body>
+
+<div class="dialogue-box">
+    <img src="DBox.png" alt="Dialogue Box">
+</div>
+
+<div class="dialogue-text" id="dialogueText"></div>
+
+<script>
+// Array of 4 lines of dialogue
+const dialogue = [
+    "You: Hey, I wanted to ask you something.",
+    "Mark: Oh? What’s up?",
+    "You: I was wondering if you wanted to hang out sometime.",
+    "Mark: Ah… I think I’m gonna pass this time."
+];
+
+let index = 0;
+const text = document.getElementById("dialogueText");
+
+// Initialize first line
+text.textContent = dialogue[index];
+
+// Advance dialogue on click anywhere
+document.body.addEventListener("click", () => {
+    if (index < dialogue.length - 1) {
+        index++;
+        updateText();
+    }
+});
+
+function updateText() {
+    text.textContent = dialogue[index];
+    text.style.animation = "none";
+    text.offsetHeight; // trigger reflow
+    text.style.animation = "pop .35s ease";
+}
+</script>
+
+</body>
+</html>
