--- a/MarkNo.html
+++ b/MarkNo.html
@@ -64,10 +64,10 @@ body {
 <script>
 // Array of 4 lines of dialogue
 const dialogue = [
-    "You: Hey, I wanted to ask you something.",
-    "Mark: Oh? What’s up?",
-    "You: I was wondering if you wanted to hang out sometime.",
-    "Mark: Ah… I think I’m gonna pass this time."
+    "You: sorry, ive never heard of it...",
+    "Mark: Oh... thats ok, Its just something ive poured my heart and soul into...",
+    "*silence*",
+    "Mark: Ah… I think I’m gonna go...find my seat."
 ];
 
 let index = 0;
